fixed text-align, display, margin, and padding

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -25,3 +25,33 @@ button {
   background: white;
   border: 1px solid #eee;
 }
+
+
+/* -- */
+.card {
+  padding: 8px;
+}
+
+.title {
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-size: 16px;
+  padding: 8px;
+}
+
+.content {
+  padding: 16px 8px;
+  margin-bottom: 8px;
+}
+
+.button-container {
+  text-align: center;
+  padding: 8px;
+
+}
+
+button {
+  display: block;
+  padding: 8px 24px;
+  margin: 0 auto;
+}
